syntax = "proto3";

package game.proto;

option java_package = "com.game.proto";
option java_outer_classname = "LoginProto";
option java_multiple_files = false;

import "common.proto";

// ==================== 登录协议 (1000-1999) ====================

// 登录请求 (协议号: 1001)
message LoginRequest {
    string account = 1;          // 账号
    string password = 2;         // 密码 (MD5)
    string device_id = 3;        // 设备 ID
    string platform = 4;         // 平台 (ios/android/pc)
    string version = 5;          // 客户端版本
    string channel = 6;          // 渠道
}

// 登录响应
message LoginResponse {
    Result result = 1;
    string token = 2;            // 登录 Token
    int64 expire_time = 3;       // Token 过期时间
    repeated RoleBrief roles = 4; // 角色列表
    ServerInfo server = 5;       // 服务器信息
}

// 角色简要信息
message RoleBrief {
    int64 role_id = 1;           // 角色 ID
    string role_name = 2;        // 角色名
    int32 level = 3;             // 等级
    int32 avatar_id = 4;         // 头像 ID
    int64 last_login = 5;        // 最后登录时间
    int32 server_id = 6;         // 所在服务器
}

// 服务器信息
message ServerInfo {
    int32 server_id = 1;         // 服务器 ID
    string server_name = 2;      // 服务器名
    int32 status = 3;            // 状态 (0:维护 1:正常 2:繁忙 3:爆满)
    int64 open_time = 4;         // 开服时间
}

// 创建角色请求 (协议号: 1002)
message CreateRoleRequest {
    string role_name = 1;        // 角色名
    int32 avatar_id = 2;         // 头像 ID
    int32 gender = 3;            // 性别 (0:女 1:男)
}

// 创建角色响应
message CreateRoleResponse {
    Result result = 1;
    RoleBrief role = 2;          // 创建的角色信息
}

// 进入游戏请求 (协议号: 1003)
message EnterGameRequest {
    int64 role_id = 1;           // 角色 ID
}

// 进入游戏响应
message EnterGameResponse {
    Result result = 1;
    PlayerFullInfo player = 2;   // 玩家完整信息
}

// 玩家完整信息
message PlayerFullInfo {
    int64 role_id = 1;           // 角色 ID
    string role_name = 2;        // 角色名
    int32 level = 3;             // 等级
    int64 exp = 4;               // 经验
    int64 gold = 5;              // 金币
    int64 diamond = 6;           // 钻石
    int32 vip_level = 7;         // VIP 等级
    int64 vip_exp = 8;           // VIP 经验
    int32 avatar_id = 9;         // 头像 ID
    int32 frame_id = 10;         // 头像框 ID
    int32 energy = 11;           // 体力
    int32 max_energy = 12;       // 最大体力
    int64 energy_recover_time = 13; // 体力恢复时间
    int64 create_time = 14;      // 创建时间
    int64 guild_id = 15;         // 公会 ID (0 表示无公会)
    string guild_name = 16;      // 公会名
}

// 登出请求 (协议号: 1004)
message LogoutRequest {
}

// 登出响应
message LogoutResponse {
    Result result = 1;
}

// 重连请求 (协议号: 1005)
message ReconnectRequest {
    string token = 1;            // Token
    int64 role_id = 2;           // 角色 ID
}

// 重连响应
message ReconnectResponse {
    Result result = 1;
    PlayerFullInfo player = 2;   // 玩家信息
}

// 心跳请求 (协议号: 1006)
message HeartbeatRequest {
    int64 client_time = 1;       // 客户端时间
}

// 心跳响应
message HeartbeatResponse {
    Result result = 1;
    int64 server_time = 2;       // 服务器时间
}
